fix(components): [menu] Style when you expand the collapse menu

--- a/packages/theme-chalk/src/menu.scss
+++ b/packages/theme-chalk/src/menu.scss
@@ -60,16 +60,19 @@
   box-sizing: border-box;
 
   @include m(vertical) {
-    &:not(.#{$namespace}-menu--collapse):not(.#{$namespace}-menu--popup-container) {
-      & .#{$namespace}-menu-item,
-      & .#{$namespace}-sub-menu__title,
-      & .#{$namespace}-menu-item-group__title {
-        white-space: nowrap;
-        padding-left: calc(
-          #{getCssVar('menu-base-level-padding')} + #{getCssVar('menu-level')} *
-            #{getCssVar('menu-level-padding')}
-        );
-      }
+    &:not(.#{$namespace}-menu--collapse){
+	    width: 200px;
+	    &:not(.#{$namespace}-menu--popup-container) {
+		    & .#{$namespace}-menu-item,
+		    & .#{$namespace}-sub-menu__title,
+		    & .#{$namespace}-menu-item-group__title {
+			    white-space: nowrap;
+			    padding-left: calc(
+					    #{getCssVar('menu-base-level-padding')} + #{getCssVar('menu-level')} *
+					    #{getCssVar('menu-level-padding')}
+			    );
+		    }
+	    }
     }
   }
 
@@ -174,6 +177,7 @@
 
     > .#{$namespace}-menu-item,
     > .#{$namespace}-sub-menu > .#{$namespace}-sub-menu__title {
+	    //overflow: hidden;
       [class^='#{$namespace}-icon'] {
         margin: 0;
         vertical-align: middle;
@@ -343,3 +347,4 @@
   transition: getCssVar('transition-duration-fast');
   opacity: 0;
 }
+
